--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1095,11 +1095,8 @@ select {
 .mb-3 {
   margin-bottom: 0.75rem;
 }
-.-mt-px {
-  margin-top: -1px;
-}
-.mt-0 {
-  margin-top: 0px;
+.mb-0 {
+  margin-bottom: 0px;
 }
 .ml-auto {
   margin-left: auto;
@@ -1107,17 +1104,23 @@ select {
 .mb-5 {
   margin-bottom: 1.25rem;
 }
-.mb-0 {
-  margin-bottom: 0px;
-}
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+.-mt-px {
+  margin-top: -1px;
+}
+.mt-0 {
+  margin-top: 0px;
 }
 .mr-auto {
   margin-right: auto;
 }
 .block {
   display: block;
+}
+.inline {
+  display: inline;
 }
 .flex {
   display: flex;
@@ -1205,6 +1208,9 @@ select {
 }
 .w-10 {
   width: 2.5rem;
+}
+.w-1\/2 {
+  width: 50%;
 }
 .w-20 {
   width: 5rem;
@@ -1588,8 +1594,8 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
-.pt-8 {
-  padding-top: 2rem;
+.pt-0 {
+  padding-top: 0px;
 }
 .pb-5 {
   padding-bottom: 1.25rem;
@@ -1597,8 +1603,8 @@ select {
 .pt-3 {
   padding-top: 0.75rem;
 }
-.pt-0 {
-  padding-top: 0px;
+.pt-8 {
+  padding-top: 2rem;
 }
 .text-left {
   text-align: left;
@@ -1732,6 +1738,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -1739,10 +1749,6 @@ select {
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
